test/Fail/Erased-modules-1.err
Erased-modules-1.agda:13.5-8: error: [DefinitionIsErased]
Identifier M.B is declared erased, so it cannot be used here
when checking that the expression M.B has type @0 Set → Set
